[package]
name = "video-to-gif"
version = "0.1.0"
authors = ["mxr <eetu.kivelae@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3", features = ["openssl"] }
actix-files = "0.5"
openssl = { version = "0.10" }
toml = "0.5.8"
serde_derive = "1.0"
serde = "1.0"